--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,10 +1,32 @@
 body{
     margin-top: 0px;
     margin-left: 0px;
-    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .top-bar{
-    height: 50px;
+    height: 100px;
     background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.menu-button{
+    position: absolute;
+    right: 5px;
+    top: 25px;
+    height: 50px;
+}
+
+#menu{
+    background-color: aqua;
+    height: 50%;
+    width: fit-content;
+    position: absolute;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 10px;
 }
