--- a/HTML/style.css
+++ b/HTML/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 .top-bar{
-    height: 100px;
+    height: 75px;
     background-color: gray;
     display: flex;
     justify-content: center;
@@ -15,7 +15,7 @@ body{
 .menu-button{
     position: absolute;
     right: 5px;
-    top: 25px;
+    top: 12.5px;
     height: 50px;
 }
 
@@ -25,9 +25,9 @@ body{
     width: 75px;
     position: absolute;
     right: 0px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding-top: 10px;
+    padding-top: 20px;
 }
