--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+:root{
+    --me-margin: 2%;
+}
+
+
 /* universal */
 
 body{
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin: 0px;
     height: 100%;
 }
 
@@ -43,12 +46,12 @@ a{
 /* home page */
 
 .home-body{
-    --h: 350px;
     position: absolute;
     right: 0px;
-    height: var(--h);
+    height: 350px;
     width: 75%;
     background-color: blueviolet;
+    
     /*align div veticly*/
     top: 0; 
     bottom: 0; 
@@ -60,13 +63,10 @@ a{
 }
 
 #home-text{
-    width: fit-content;
+    width: 300px;
     text-align: center;
     position: absolute;
-    left: 0;
-    right: 50vh;
-    margin: auto;
-
+    left: calc(50% - 300px);
 }
 
 /*courses*/
@@ -102,15 +102,31 @@ a{
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     color: white;
+    border-radius: 10px;
 }
 
 #me-heading{
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: var(--me-margin);
+    margin-left: var(--me-margin);
+}
+
+.me-flexbox{
+    display: flex;
+    align-items: center;
+    margin-left: var(--me-margin);
+    margin-right: var(--me-margin);
+    gap: 13%;
 }
 
 .me-map{
     width: 40%;
-    margin-left: 10px;
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
+#me-paragraph{
+    width: 40%;
+    height: 50%;
+    text-align: center;
 }
 
