changing snow.webp to png for compatability

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ a{
 .int-body{
     height: 60vh;
     width: 50vw;
-    background-image: url("../img/snow.webp");
+    background-image: url("../img/snow.png");
     background-size: cover;
     color: white;
     border-radius: 10px;
